--- a/next-task-vision/.env
+++ b/next-task-vision/.env
@@ -1,1 +1,3 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/tasks"
+DATABASE_URL="postgresql://<USERNAME>:<PASSWORD>@localhost:5432/tasks"
+
+# DATABASE_URL="postgresql://<USERNAME>:<PASSWORD>@<HOST>:<PORT>/<DATABASE>?schema=<SCHEMA>"
